# algorithm

./: .gitignore  CLAUDE.md  README.md  README_zh.md  go.mod  lc-test.sh  pyproject.toml
.claude/commands/: doc-solution.md  gen-test.md
.githooks/: post-commit
.obsidian/: appearance.json  community-plugins.json  workspace.json
assets/stats/: .stats_cache_en.json  .stats_cache_zh.json
cmd/calc/: calc.go  calc_test.go
cmd/demo/du/: du.go
cmd/demo/tree/: tree.go
docs/: README_zh.md  neetcode_roadmap.md
docs-zh/: neetcode_roadmap.md
docs-zh/leetcode/0001-0100/: 0001_two_sum.md  0002_add_two_numbers.md  0003_longest_substring_without_repeating_characters.md  0004_median_of_two_sorted_arrays.md  0007_reverse_integer.md  0011_container_with_most_water.md  0015_3sum.md  0019_remove_nth_node_from_end_of_list.md  0020_valid_parentheses.md  0021_merge_two_sorted_lists.md  0036_valid_sudoku.md  (+13 more)
gods/containers/: containers.go
gods/heaps/: heaps.go
gods/list/: linkedlist.go  linkedlist_test.go  list.go
gods/lists/: lists.go
gods/maps/: maps.go
gods/queues/: queues.go
gods/stacks/: stacks.go
gods/trees/: tree.go
gods/utils/: comparator.go
leetcode/utils/: commons.go  testing_utils.go
python/algo-chat/: pyproject.toml
python/auto-docs/: pyproject.toml
python/crawler/: README.md  pyproject.toml  sync_en_docs.sh
python/crawler/src/crawler/: __init__.py  leetcode.py  utils.py
python/lc-stats/: README.md  pyproject.toml
python/lc-stats/src/lc_stats/: __init__.py  charts.py  parser.py  readme.py  stats.py
python/test-gen/: pyproject.toml
(+382 files in other folders)
