[project]
name = "crawler"
version = "0.1.0"
description = "LeetCode problem crawler that generates markdown docs and Go templates"
readme = "README.md"
authors = [
    { name = "Leo", email = "liaofeng0203@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx[socks]>=0.28.0",
    "markdownify>=0.14.0",
]

[project.scripts]
crawler = "crawler:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
